--- a/section8/lesson183/package.json
+++ b/section8/lesson183/package.json
@@ -9,6 +9,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.34.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
