--- a/section8/lesson183/package.json
+++ b/section8/lesson183/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.34.2",
     "react-scripts": "4.0.3",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
