--- a/react + typescript/react-typescript-demo/package.json
+++ b/react + typescript/react-typescript-demo/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^16.11.57",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "sass": "^1.54.9",
     "typescript": "^4.8.2",
     "web-vitals": "^2.1.4"
   },
